[package]

name = "intecture-api"
version = "0.1.1"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "API component for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "api"]
homepage = "https://intecture.io"
repository = "https://github.com/betweenlines/intecture-api"
build = "build.rs"

[features]

default = ["remote-run"]

# Run API endpoints against the local machine
local-run = []

# Run API endpoints against a remote agent
remote-run = ["czmq", "zfilexfer"]

[build-dependencies]

regex = "0.1.*"

[dev-dependencies]

lazy_static = "0.1.*"
tempdir = "0.3"

[dependencies]

libc = "0.2.*"
rustc-serialize = "0.3.*"
regex = "0.1.*"

# Feature `remote-run`
# czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.4", optional = true }
czmq = { git = "https://github.com/petehayes102/rust-czmq.git", branch = "dev", optional = true }
zfilexfer = { git = "https://github.com/betweenlines/zfilexfer.git", branch = "dev", optional = true }

[lib]

name = "inapi"
crate_type = ["rlib", "dylib"]
