[package]
name = "intecture-api"
version = "0.3.2"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "API component for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "api"]
homepage = "https://intecture.io"
repository = "https://github.com/intecture/api"
build = "build.rs"

[features]
default = ["remote-run"]
# Run API endpoints against the local machine
local-run = []
# Run API endpoints against a remote agent
remote-run = ["czmq"]

[dev-dependencies]
tempdir = "0.3"

[dependencies]
lazy_static = "0.2"
libc = "0.2"
mustache = "0.8"
regex = "0.2"
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
tempfile = "2.1"
zfilexfer = "0.0.2"
hostname = "0.1"
czmq = { version = "0.1", optional = true }
pnet = "0.16"

[lib]
name = "inapi"
crate_type = ["rlib", "dylib"]
