[package]
name = "intecture_agent"
version = "0.4.0"
authors = [ "Pete Hayes <pete@intecture.io>" ]
license = "MPL-2.0"
description = "Tiny daemon that wraps the core API"
homepage = "https://intecture.io"
repository = "https://github.com/intecture/api"
documentation = "https://intecture.io/rust/inapi/"
keywords = ["intecture", "agent"]
categories = ["servers"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[badges]
travis-ci = { repository = "intecture/api" }

[dependencies]
env_logger = "0.4"
error-chain = "0.11"
futures = "0.1"
intecture_api = { version = "0.4.0", path = "../core" }
serde_json = "1.0"
tokio-proto = "0.1"
tokio-service = "0.1"
