[package]
name = "intecture_bindings"
version = "0.4.0"
authors = [ "Pete Hayes <pete@intecture.io>" ]
license = "MPL-2.0"
description = "Rust FFI and language bindings"
homepage = "https://intecture.io"
repository = "https://github.com/intecture/api"
documentation = "https://intecture.io/rust/inapi/"
keywords = ["intecture", "bindings"]
categories = ["servers"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[badges]
travis-ci = { repository = "intecture/api" }

[dependencies]
error-chain = "0.11"
intecture_api = { version = "0.4.0", path = "../core" }
libc = "0.2"
