[package]
name = "intecture_api"
version = "0.4.0"
authors = [ "Pete Hayes <pete@intecture.io>" ]
license = "MPL-2.0"
description = "Core API for configuring your servers"
homepage = "https://intecture.io"
repository = "https://github.com/intecture/api"
documentation = "https://intecture.io/rust/inapi/"
keywords = ["intecture", "api"]
categories = ["servers"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[badges]
travis-ci = { repository = "intecture/api" }

[dependencies]
bytes = "0.4"
erased-serde = "0.3"
error-chain = "0.11"
futures = "0.1"
hostname = "0.1"
ipnetwork = "0.12"
log = "0.3"
pnet = "0.20"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-process = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[[example]]
name = "basic"

[[example]]
name = "remote_host"
